chore: 完善核心架构与bug修复
本次提交包含多项核心改进与问题修复：
1. 新增运行时模式抽象与环境切换能力，支持dev/prod模式动态切换并添加密码认证
2. 重构数据源代理，禁止直接使用凭据连接数据源，强制使用灵核配置的连接池
3. 修复金丝雀路由逻辑，避免非canary实例被误当作灰度目标
4. 优化类加载器生命周期管理，修复Windows路径解析问题与缓存清理逻辑
5. 新增语义化版本比较工具，修复版本排序错误
6. 重构危险API验证器，使用显式白名单替代后缀判定，提升安全性
7. 修复权限同步逻辑，改用原子替换避免权限真空窗口
8. 新增多项测试用例与国际化支持，完善监控与限流能力
9. 修复示例项目与测试用例中的各类兼容性问题